--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
+
 {% import "macros.html" as m %}
+
 <html lang="en">
-	<body id="container">
-   		<div id="header">
-   			{% block head %}
-				<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
-				<meta charset="UTF-8">
-				<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-				<!-- jQuery -->
-				<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-				<!-- Semantic Main CSS -->
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
-				<!-- Semantic Reset CSS -->
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/reset.min.css"/>
-				<!-- Semantic Menu CSS -->
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/components/menu.min.css"/>
-				<!-- Main Semantic JS  -->
-			    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
-				<!-- Custom CSS -->
-				<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
-				<!-- Browser tab name -->
-				<title>{{ title }}</title>
-				<!-- Navbar -->
-				<div class="ui attached inverted menu">
-				  	{{ m.nav_link('index', 'Home') }}
-				  	{{ m.nav_link('map', 'Map') }}
-					{{ m.nav_link('contact', 'Contact') }}
-				 	<div class="right menu">
-				 		<!-- User is logged in -->
-				      	{% if current_user.is_authenticated %}
-				      		<div class="item">
-				        		<a class="ui primary button" href="/user/account">{{ current_user.full_name }}</a>
-				    		</div>
-				    		<div class="item">
-				        		<a class="ui default button" href="/user/signout">Sign out</a>
-				    		</div>
-			          	<!-- User is not logged in -->
-			          	{% else %}
-			          		<div class="item">
-				        		<a class="ui primary button" href="/user/signin">Sign in</a>
-				    		</div>
-				    		<div class="item">
-				        		<a class="ui default button" href="/user/signup">Sign up</a>
-				    		</div>
-						{% endif %}
-			  		</div>
-				</div>
-			{% endblock %}
-   		</div>
+
+	{% block head %}
+
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+	<meta charset="UTF-8">
+	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="img/x-icon">
+	
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
+
+	<!-- Custom Stylesheets -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+
+	<!-- Scripts -->
+	<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.easing.1.3.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/wow.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/classie.js') }}"></script>
+
+	<!-- Browser tab name -->
+	<title>{{ title }}</title>
+
+	{% endblock %}
+
+	<body>
+
+			<header class="header" id="header">
+			<div id="particles-js"></div>
+			<div class="cover logo animated fadeInDown delay-07s">
+				FILIPINEU<br>
+				<p>A Bidirectional Filipino-English<br><b>Neural Machine Translation</b></p><br>
+				<a class="link animated fadeInUp delay-1s servicelink" href="#service"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+			</div>
+	</header>
+
+		<nav class="main-nav-outer narbar-fixed-top">
+			<ul class="main-nav">
+				<li class="small-logo"><a href="#"><img src="img/icon2.png" alt="" class="logo-img"></a></li>
+				<li>{{ m.nav_link('api.index', 'Get Started', 'translate') }}</li>
+				<li>{{ m.nav_link('about', 'About') }}</li>
+				<li>{{ m.nav_link('index', 'Home') }}</li>
+			</ul>
+			<a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
+		</nav>
+
    		<!-- Message flashing -->
 		{% with messages = get_flashed_messages(with_categories=true) %}
 		  	{% if messages %}
@@ -58,9 +66,11 @@
 		    	</ul>
 		  	{% endif %}
 		{% endwith %}
+
    		<div id="body" class="body">
    			{% block content %}{% endblock %}
-   		</div>
+   		</div>.
+
 		<div id="footer">
 			<div class="ui divider"></div>
 	    		<div class="ui divided horizontal footer link list">
@@ -73,5 +83,6 @@
 	    		</div>
 	  		</div>
 		</div>
+
 	</body>
 </html>
