--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,21 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, maximum-scale=1">
-
-		<title>FILIPINEU</title>
+		<title>FILIPINEU - Home </title>
 		<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 		<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="img/x-icon">
-
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
-
+		<link rel='stylesheet' type='text/css' href="{{ url_for('static', filename='css/googlefonts.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css') }}">
-
-		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.1.8.3.min.js') }}"></script>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.easing.1.3.js') }}"></script>
@@ -48,13 +44,13 @@
 						<a href="/"><img src="{{ url_for('static', filename='img/icon2.png') }}" alt="" class="logo-img"></a>
 					</li>
 					<li>
-						<a href="#" class="navbar-right">Contact Us</a>
+						<a href="/api/apidocs" class="navbar-right translate">Get Started</a>
 					</li>
 					<li>
-						<a href="#" class="navbar-right">How it works</a>
+						<a href="/about" class="navbar-right">About</a>
 					</li>
 					<li>
-						<a href="#" class="navbar-right">About</a>
+						<a href="/" class="navbar-right">Home</a>
 					</li>
 				</ul>
 				<a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
@@ -62,60 +58,93 @@
 		</nav>
 		<section class="main-section" id="service">
 			<div class="container">
-				<h2>Machine Translation using <span style="color: #0082B8; text-transform: uppercase;">Neural Networks</span></h2>
-				<h6>Neural Machine Translation (NMT) brings state of the art results</h6>
+				<h2>
+					Machine Translation using
+					<span style="color: #0082B8; text-transform: uppercase;">
+						Neural Networks
+					</span>
+				</h2>
+				<h6>
+					Neural Machine Translation (NMT) brings state of the art results
+				</h6>
 				<div class="row">
 					<div class="col-lg-6 col-sm-4 wow fadeInLeft delay-05s">
 						<div class="div-section">
 							<div class="div-section-col">
-								<h3 style="color: ">Deep Learning Techniques</h3>
+								<h3>
+									Deep Learning Techniques
+								</h3>
 								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 							</div>
 						</div>
 						<div class="div-section">
 							<div class="div-section-col2">	
-								<h3 style="color: ">Fluency &amp; Higher Generic Quality</h3>
+								<h3>
+									Fluency &amp; Higher Generic Quality
+								</h3>
 								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 							</div>
 						</div>
 					</div>	
 					<figure class="col-lg-6 col-sm-6  text-right wow fadeInUp delay-02s">
-						<img src="{{ url_for('static', filename='img/macbook1.png') }}" alt="">
+						<img src="{{ url_for('static', filename='img/macbook1.png') }}">
 					</figure>
 				</div>
 			</div>
 		</section>
 		<section class="main-section" id="service">
 			<div class="container">
-				<h2>Previous approaches before <span style="color:#0082B8;"><br>Neural Machine Translation</span></h2>
+				<h2>
+					Previous approaches before
+					<span style="color:#0082B8;">
+						<br>
+						Neural Machine Translation
+					</span>
+				</h2>
 				<div class="row">
 					<div class="col-lg-6 col-sm-6 wow fadeInDown delay-05s">
 						<div class="div-section">
 							<div class="div-section-col3">
-								<h2><span style="color:#0082B8;">Rule Based</span> Approach</h2>
+								<h2>
+									<span style="color:#0082B8;">
+										Rule Based
+									</span>
+									Approach
+								</h2>
 								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-								<a href="#" class="learn-link">Learn more</a>
+								<a href="#" class="learn-link">
+									Learn more
+								</a>
 							</div>
 						</div>
 					</div>	
 					<div class="col-lg-6 col-sm-6 wow fadeInDown delay-05s">
 						<div class="div-section">
 							<div class="div-section-col3">
-								<h2><span style="color:#0082B8;">Statistical</span> Approach</h2>
+								<h2>
+									<span style="color:#0082B8;">
+										Statistical
+									</span> 
+									Approach
+								</h2>
 								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-								<a href="#" class="learn-link">Learn more</a>
+								<a href="#" class="learn-link">
+									Learn more
+								</a>
 							</div>
 						</div>
 					</div>	
-
 				</div>
 			</div>
 		</section>
-
 		<section class="main-section" id="how-it-works">
 			<div class="container">
-				<h2>how it works</h2>
-				<h6>Neural Machine Translation (NMT) brings state of the art results</h6>
+				<h2>
+					how it works
+				</h2>
+				<h6>
+					Neural Machine Translation (NMT) brings state of the art results
+				</h6>
 				<div class="row">
 					<figure class="col-lg-8 col-sm-8  text-right wow fadeInUp delay-02s">
 						<img src="{{ url_for('static', filename='img/translate.png') }}" alt="">
@@ -123,7 +152,9 @@
 					<div class="col-lg-4 col-sm-4 wow fadeInLeft delay-05s">
 						<div class="div-section">
 							<div class="div-section-col2">
-								<h3>FILIPINEU</h3>
+								<h3>
+									FILIPINEU
+								</h3>
 								<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
 							</div>
 						</div>
@@ -132,11 +163,13 @@
 			</div>
 		</section>
 
-		
-
 		<section class="ready-section">
-			<h1 class="wow fadeInDown delay-02s">Ready to use Filipineu?</h1>
-			<a href="#" class="btn-translate wow fadeInDown delay-02s">Translate Now</a>
+			<h1 class="wow fadeInDown delay-02s">
+				Ready to use Filipineu?
+			</h1>
+			<a href="#" class="btn-translate wow fadeInDown delay-02s">
+				Translate Now
+			</a>
 		</section>
 		
 		<footer class="footer">
@@ -159,34 +192,36 @@
 		</footer>
 
 		<a href="#" class="scrollup" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
+	
+		<script src="{{ url_for('static', filename='js/particles.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 		<script type="text/javascript">
+			
+			// 
+
 			$(document).ready(function(e) {
 				$('#test').scrollToFixed();
 				$('.res-nav_click').click(function() {
 					$('.main-nav').slideToggle();
 					return false
-
 				});
 
 			});
-		</script>
 
-		<script>
+			// WOW
+
 			wow = new WOW({
 				animateClass: 'animated',
 				offset: 100
 			});
 			wow.init();
-		</script>
 
+			// 
 
-		<script type="text/javascript">
 			$(window).load(function() {
-
 				$('.main-nav li a, .servicelink').bind('click', function(event) {
 					var $anchor = $(this);
-
 					$('html, body').stop().animate({
 						scrollTop: $($anchor.attr('href')).offset().top - 102
 					}, 1500, 'easeInOutExpo');
@@ -196,54 +231,31 @@
 					event.preventDefault();
 				});
 			})
-		</script>
 
-		<script>
+			// 
+
 			$(function () {
 			  $(document).scroll(function () {
 				  var $nav = $(".navbar-fixed-top");
 				  $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
 				});
 			});
-		</script>
-		<script src="{{ url_for('static', filename='js/particles.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/app.js') }}"></script>
-		<!-- <script src="js/lib/stats.js"></script> -->
-		<script>
-			var count_particles, stats, update;
-			stats = new Stats;
-			stats.setMode(0);
-			stats.domElement.style.position = 'absolute';
-			stats.domElement.style.left = '0px';
-			stats.domElement.style.top = '0px';
-			document.body.appendChild(stats.domElement);
-			count_particles = document.querySelector('.js-count-particles');
-			update = function() {
-			  	stats.begin();
-			  	stats.end();
-			  	if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
-			  	  count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
-			  	}
-			  	requestAnimationFrame(update);
-			};
-			requestAnimationFrame(update);
-		</script>
 
-		<script type="text/javascript">
+			// 
+
 			$(window).scroll(function() {
-		    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
-		        $('#return-to-top').fadeIn(200);    // Fade in the arrow
-		    } else {
-		        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
-		    }
+		    	if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+		        	$('#return-to-top').fadeIn(200);    // Fade in the arrow
+		    	} else {
+		        	$('#return-to-top').fadeOut(200);   // Else fade out the arrow
+		   		}
 			});
+
 			$('#return-to-top').click(function() {      // When arrow is clicked
-		    $('body,html').animate({
-		        scrollTop : 0                       // Scroll to top of body
-		    }, 500);
+		    	$('body,html').animate({
+		        	scrollTop : 0                       // Scroll to top of body
+		    		}, 500);
 			});
 		</script>
-
 	</body>
-
 </html>
