Completed API, with database integration for translation

--- a/app/templates/user/forgot.html
+++ b/app/templates/user/forgot.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 	<div class="ui form-user center raised very padded text container segment">
-		<form class="ui form" action="/user/forgot" method="POST">
+		<form class="ui form" action="/api/forgot" method="POST">
 			<h4 class="ui dividing header">Enter your email address so that we can send you a password reset link</h4>
 			{{ m.render_field(form.email) }}
 		  	{{ form.csrf_token }}
