--- a/app/templates/user/signup.html
+++ b/app/templates/user/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 	<div class="ui form-user center raised very padded text container segment">
-		<form class="ui form" action="/user/signup" method="post">
+		<form class="ui form" action="/api/signup" method="post">
 			<h4 class="ui dividing header">Sign up</h4>
 	    	{{ m.render_field(form.first_name) }}
 	    	{{ m.render_field(form.last_name) }}
