--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -94,13 +94,21 @@ p{
 
 .header{
 	text-align:center;
-	background:url(../img/background3.jpg) left top repeat;
-	/*background-color: #0082B8;*/
-	/*background-color: #0d2839;*/
+	/*background:url(../img/background3.jpg) left top repeat;
 	background-size: cover;
-	/*padding:280px 0;*/
-	height: 100vh;
+	height: 100vh;*/
 }
+
+.parallax { 
+    background-image: url("../img/background3.jpg");
+    height: 100vh; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align:center;
+}
+
 .logo{
 	width:130px;
 	margin:0 auto 35px;
@@ -132,7 +140,8 @@ p{
 
 .cover {
 	font-weight: bold;
-    font-size: 700%;
+    font-size: 400%;
+    font-family: montserrat;
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -150,6 +159,7 @@ p{
 	font-size: 40px;
 	font-weight: normal;
 	line-height: 100%;
+	font-family: montserrat;
 }
 
 /* Particles
@@ -157,32 +167,27 @@ p{
 
 canvas {
 	display:block;
-  	/*vertical-align:bottom;*/
   	width: 100%;
 }
 
 #particles-js {
 	width: 100%;
-  height: 100%;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
+  	height: 100%;
+  	background-image: url('');
+  	background-size: cover;
+  	background-position: 50% 50%;
+  	background-repeat: no-repeat;
 }
 /* Navigation
 ---------------------------------*/
 .main-nav-outer{
 	padding:10px 10px;
-	/*border-bottom:1px solid #dddddd;*/
-	/*box-shadow:0 4px 5px -3px #ececec;*/
-	/*position:relative;*/
 	background: transparent;
 	height: 100px;
 	transition: background-color .3s linear;
   	-webkit-transition: .3s;
 }
 .main-nav{
-	/*text-align:center;*/
 	margin:10px 0 0px;
 	padding:0;
 	list-style:none;
@@ -194,13 +199,12 @@ canvas {
 .main-nav li a{
 	display:inline-block;
 	color:#fff;
-	/*text-transform:uppercase;*/
-	/*font-family: 'Montserrat', sans-serif;*/
-	font-family: inherit;
+	font-family: Montserrat;
+	text-transform: uppercase;
+	font-weight: bold;
 	font-size: 16px;
 	text-decoration: none;
 	line-height:20px;
-	/*margin:17px 32px;*/
 	padding: 8px 25px;
 	transition:all 0.3s ease-in-out;
 	-moz-transition:all 0.3s ease-in-out;
@@ -218,11 +222,7 @@ canvas {
 	padding: 8px 25px
 }
 
-.main-nav li a.translate:hover {
-/*	color: #96d3ec;
-	background-color: #0082B8;
-	border: 2px solid #96d3ec;
-	border-radius: 50px;*/
+.main-nav li a.translate:hover {	
 	padding: 8px 25px
 	
 }
@@ -233,21 +233,15 @@ canvas {
 
 .main-section{
 	padding:90px 0 110px;
-	height: 100vh;
 	border-bottom: 1px solid #eee;
 }
 
 .navbar-fixed-top.scrolled {
-  	/*background-color: #fff !important;*/
-  	/*background-color: rgba(0,0,0,0.2);*/
-  	background-color: #0082B8;
-  	/*background-color: #0b2534;*/
-  	/*background-color: #000;*/
-  	opacity: 0.9;
+  	background-color: #fff !important;
+  	box-shadow:0 4px 5px -3px #5f5e5e;
   	transition: background-color .3s linear;
   	-webkit-transition: .3s;
-  	/*text-align:center;*/
-	padding:0;
+  	padding:0;
 	list-style:none;
 	padding-top: 5px;
 	width: 100%;
@@ -259,8 +253,10 @@ canvas {
 	-webkit-transition: .3s;
 }
 .navbar-fixed-top.scrolled .main-nav li a {
-  /*color:#0082B8;*/
-  color: #fff;
+  color:#0082B8;
+  font-family: montserrat;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .navbar-fixed-top.scrolled .main-nav li a:hover {
@@ -270,10 +266,8 @@ canvas {
 
 .navbar-fixed-top.scrolled .main-nav li a.translate:hover {
   	text-decoration:none;
-  	/*color: #7cc576;*/
   	color: #fff;
 	background-color: #0082B8;
-	/*background-color: rgba(0, 0, 0, 0.2);*/
 	border: 2px solid #fff;
 	border-radius: 50px;
 	padding: 8px 25px
@@ -388,7 +382,8 @@ canvas {
 .footer{
 	background-color: #1C1C1C;
 	padding:35px 0 35px;
-	height: 400px;
+	height: 200px;
+	text-align: center;
 }
 .footer-logo{
 	margin:15px auto 35px;
@@ -396,11 +391,11 @@ canvas {
 }
 .copyright, .credits{
 	color:#cccccc;
-	/*color: #545050;*/
 	font-size:14px;
 	display:block;
 	text-align:center;
 	padding-top: 10px;
+	text-align: center;
 }
 .copyright a, .credits a{
 	color:#7cc576;
@@ -420,7 +415,7 @@ canvas {
 	font-family: 'FontAwesome';
 	font-size:38px;
 	text-decoration: none !important;
-	color:#fff;
+	color:#0282b8;
 	font-style:normal;
 	display:none;
 	width:42px;
@@ -432,7 +427,7 @@ canvas {
 }
 
 .res-nav_click:hover, .res-nav_click:active, .res-nav_click:focus {
-	color: #96d3ec !important;
+	color: #0282b8 !important;
 }
 
 /* Return to top
@@ -448,9 +443,6 @@ canvas {
     height: 50px;
     display: block;
     text-decoration: none;
-    /*-webkit-border-radius: 35px;
-    -moz-border-radius: 35px;
-    border-radius: 35px;*/
     display: none;
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s ease;
