--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -115,13 +115,19 @@ nav li a.highlight:hover {
 --------------------------------*/
 
 footer {
-    background-color: #243e52;
-    color: #f5f5f5;
-    padding: 32px;
+    background-color: #1C1C1C;
+	padding:35px 0 35px;
+	height: 250px;
+	text-align: center;
+	color: #fff;
+}
+
+footer img {
+	padding-top: 10px;
 }
 
 footer a {
-    color: #f5f5f5;
+    color: #fff;
 }
 
 footer a:hover {
@@ -129,7 +135,7 @@ footer a:hover {
     text-decoration: none;
 }
 
-footer .container {
-	padding-top: 5%;
+footer p {
+	padding-top: 10px;
 }
 
