--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,37 +1,79 @@
+<!doctype html>
 {% extends "layout.html" %}
 
 {% block head %}
     {{ super() }}
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+    <link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css' ) }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet" type="text/css">
+
+    <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/wow.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/classie.js') }}"></script>
+	
 
 {% endblock %}
 
 {% block content %}
-	
+	<nav class="main-nav-outer navbar-fixed-top" id="test">
+		<div class="container">
+			<ul class="main-nav">
+				<li>
+					<a href="/about" class="navbar-brand">Researchers</a>
+				</li>
+				<li>
+					<a href="/api/docs" class="navbar-right">Get Started</a>
+				</li>
+				<li>
+					<a href="/about" class="navbar-right">About</a>
+				</li>
+				<li>
+					<a href="/" class="navbar-right">Home</a>
+				</li>
+			</ul>
+			<a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
+		</div>
+	</nav>
+
 	<section class="h-100">
 		<div class="container">
 			<div class="row">
-				<h1>Researchers</h1>
 				<div class="col-md-4">
-					
+					<div class="panel panel-default">
+					  <div class="panel-body">
+					    <img src="{{ url_for('static', filename='img/user-512.png') }}" class="img-circle img-responsive">
+					    <h4>Redentor Periabras</h4>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+					  </div>
+					</div>
 				</div>
 				<div class="col-md-4">
-					
+					<div class="panel panel-default">
+					  <div class="panel-body">
+					    <img src="{{ url_for('static', filename='img/user-512.png') }}" class="img-circle img-responsive">
+					    <h4>Jedidiah Garcia</h4>
+					    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+					  </div>
+					</div>
 				</div>
 				<div class="col-md-4">
-					
+					<div class="panel panel-default">
+					  <div class="panel-body">
+					    <img src="{{ url_for('static', filename='img/user-512.png') }}" class="img-circle img-responsive">
+					    <h4>Adviser</h4>
+					    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+					  </div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	
-	<section class="h-100">
-		<div class="container">
-			<h1>Section 2</h1>
-		</div>
-	</section>
-
 
 {% endblock %}
 
