--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 
@@ -19,10 +20,10 @@
 	<link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet" type="text/css">
 
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.min.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/wow.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/classie.js') }}"></script>
@@ -51,7 +52,7 @@
 		</div>
 	</nav>
 	
-	<header class="header" id="header">
+	<header class="parallax header" id="header">
 			<div id="particles-js"></div>
 			<div class="cover logo animated fadeInDown delay-07s">
 				FILIPINEU<br>
@@ -67,7 +68,7 @@
 			<h2>Machine Translation using <span style="color: #0082B8; text-transform: uppercase;">Neural Networks</span></h2>
 			<h6>Neural Machine Translation (NMT) brings state of the art results</h6>
 			<div class="row">
-				<div class="col-lg-6 col-sm-4 wow fadeInLeft delay-05s">
+				<div class="col-md-6 wow fadeInLeft delay-05s">
 					<div class="div-section">
 						<div class="div-section-col">
 							<h3 style="color: ">Deep Learning Techniques</h3>
@@ -81,7 +82,7 @@
 						</div>
 					</div>
 				</div>	
-				<figure class="col-lg-6 col-sm-6  text-right wow fadeInUp delay-02s">
+				<figure class="col-md-6  text-right wow fadeInUp delay-02s">
 					<img src="{{ url_for('static', filename='img/macbook1.png') }}" alt="">
 				</figure>
 
@@ -145,16 +146,8 @@
 	<footer class="footer">
 		<div class="container">	
 			<div class="row">
-				<div class="col-md-3">
-					<img src="{{ url_for('static', filename='img/icon-white.png') }}">
-				</div>
-				<div class="col-md-3">
-				</div>
-				<div class="col-md-3">
-				</div>
-				<div class="col-md-3">
-					<span class="copyright pull-right">&copy; All Rights Reserved 2017</span>
-				</div>
+				<img src="{{ url_for('static', filename='img/icon-white.png') }}">
+				<span class="copyright">&copy; All Rights Reserved 2017</span>
 			</div>	
 		</div>
 	</footer>
