--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -18,16 +18,21 @@
 	<title>FILIPINEU - {{ title }}</title>
 	
 	<!-- Bootstrap Core CSS -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}">
-
+	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}">
+	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css"
 	<!-- Custom Font -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='lib/simple-line-icons/css/simple-line-icons.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='lib/simple-line-icons/css/simple-line-icons.css') }}"> -->
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
 
     <script type="text/javascript" scr="{{ url_for('static', filename='js/layout.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
+	
 
 	{% endblock %}
 
@@ -49,25 +54,53 @@
    		{% endblock %}
 
 		<footer class="text-center">
-			<a href="#page-top" data-toggle="tooltip" title="Back to Top">
-			    <i class="fa fa-chevron-up fa-3x" aria-hidden="true"></i>
-			</a>
+			<!-- <a href="#page-top" data-toggle="tooltip" title="Back to Top">
+			    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+			</a> -->
 			<div class="container">
+				<img src="{{ url_for('static', filename='img/icon-white.png') }}">
 				<p>&copy; 2018 FILIPINEU. All Rights Reserved.</p>
 			</div>
 		</footer>
+		<a href="#" class="scrollup" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 
 		{% block script %}
 			<!-- Bootstrap Core Javascript -->
-			<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.min.js') }}"></script>
-			<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+			<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
+			<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
 
 			<!-- Plugin JavaScript -->
-		    <script src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.min.js') }}"></script>
+		    <script src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
 
 		    <!-- Custom Scripts -->
 		    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
 		    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
+
+		    <script>
+				$(function () {
+				  $(document).scroll(function () {
+					  var $nav = $(".navbar-fixed-top");
+					  $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+					});
+				});
+			</script>
+			<script src="{{ url_for('static', filename='js/particles.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+
+			<script type="text/javascript">
+				$(window).scroll(function() {
+			    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+			        $('#return-to-top').fadeIn(200);    // Fade in the arrow
+			    } else {
+			        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
+			    }
+				});
+				$('#return-to-top').click(function() {      // When arrow is clicked
+			    $('body,html').animate({
+			        scrollTop : 0                       // Scroll to top of body
+			    }, 500);
+				});
+			</script>
 		{% endblock %}
 
 	</body>
