--- a/app/templates/user/signin.html
+++ b/app/templates/user/signin.html
@@ -2,23 +2,40 @@
 
 {% block head %}
     {{ super() }}
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/signin.css') }}">
+    <link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css' ) }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet" type="text/css">
+
+    <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/wow.js') }}"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/classie.js') }}"></script>
 {% endblock %}
 
 {% block content %}
-
-	<div class="ui form-user center raised very padded text container segment">
-		<form class="ui form" action="/api/signin" method="post">
-			<h4 class="ui dividing header">Login</h4>
-	    	{{ m.render_field(form.email) }}
-	    	{{ m.render_field(form.password) }}
-		  	{{ form.csrf_token }}
-		  	<button class="ui primary button" type="submit">Confirm</button>
-		  	<a href="/user/forgot">
-			  	<div class="ui floated right basic red button">
-	        		I forgot my password
-	    		</div>
-	    	</a>
-		</form>
-	</div>
-
+	
+	<section class="login-section">
+		<div class="center raised very padded text container segment">
+			<div class="panel panel-default">
+				<div class="panel-body">
+				<form class="form-group ui form" action="/api/signin" method="post">
+					<h4>Login</h4>
+			    	{{ m.render_field(form.email) }}
+			    	{{ m.render_field(form.password) }}
+				  	{{ form.csrf_token }}
+				  	<button class="ui primary button" type="submit">Confirm</button>
+				  	<a href="/user/forgot">
+					  	<div class="ui floated right basic red button">
+			        		I forgot my password
+			    		</div>
+			    	</a>
+				</form>
+			</div>	
+		</div>
+	</section>
 {% endblock %}
