--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -144,7 +144,7 @@ p{
     font-family: montserrat;
     position: absolute;
     width: 100%;
-    height: 100vh;
+    /*height: 100vh;*/
     top: 30%;
    	text-align: center;
     border-radius: 4px;
