--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,39 +4,41 @@
 
 <html>
 
-	{% block head %}
-
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, maximum-scale=1">
+
+	<!-- Browser tab name -->
+	<title>FILIPINEU - {{ title }}</title>
 
 	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="img/x-icon">
 
-	<!-- Browser tab name -->
-	<title>FILIPINEU - {{ title }}</title>
+	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css') }}">
 	
 	<!-- Bootstrap Core CSS -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}">
-	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css"
-	<!-- Custom Font -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css') }}">
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='lib/simple-line-icons/css/simple-line-icons.css') }}"> -->
+	<link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
+	<link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css' ) }}" rel="stylesheet" type="text/css">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
-
-    <script type="text/javascript" scr="{{ url_for('static', filename='js/layout.js') }}"></script>
+    <!-- JQuery Core JS -->
     <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
+
+	<!-- JQuery Scroll to Fixed JS-->
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
+
+	<!-- JQuery Isotope JS -->
 	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
-	
 
-	{% endblock %}
 
-	<body id="page-top">
+{% block head %}
+
+{% endblock %}
+
+	<body>
 
 		{% with messages = get_flashed_messages(with_categories=true) %}
 			<!-- Message flashing -->
@@ -49,59 +51,97 @@
 		  	{% endif %}
 		{% endwith %}
 
-   		{% block content %}
-
-   		{% endblock %}
-
-		<footer class="text-center">
-			<!-- <a href="#page-top" data-toggle="tooltip" title="Back to Top">
-			    <i class="fa fa-chevron-up" aria-hidden="true"></i>
-			</a> -->
+		<nav class="main-nav-outer navbar-fixed-top">
 			<div class="container">
-				<img src="{{ url_for('static', filename='img/icon-white.png') }}">
-				<p>&copy; 2018 FILIPINEU. All Rights Reserved.</p>
+				<ul class="main-nav">
+					<li class="small-logo">
+						<a href="#"><img src="{{ url_for('static', filename='img/icon-white.png') }}" alt="" class="logo-img"></a>
+					</li>
+					<li>
+						<a href="/api" class="navbar-right">Get Started</a>
+					</li>
+					<li>
+						<a href="/about" class="navbar-right">About</a>
+					</li>
+					<li>
+						<a href="/" class="navbar-right">Home</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+	{% block content %}
+
+	{% endblock %}
+
+		<footer class="footer">
+			<div class="container">	
+				<div class="row">
+					<img src="{{ url_for('static', filename='img/icon-white.png') }}">
+					<span class="copyright">&copy; All Rights Reserved 2018</span>
+				</div>	
 			</div>
 		</footer>
-		<a href="#" class="scrollup" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 
-		{% block script %}
-			<!-- Bootstrap Core Javascript -->
-			<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
-			<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
+		<a href="#" class="scrollup" id="return-to-top">
+			<i class="fa fa-chevron-up"></i>
+		</a>
 
-			<!-- Plugin JavaScript -->
-		    <script src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
+		<script type="text/javascript">
+			$(document).ready(function(e) {
+				$('#test').scrollToFixed();
+				$('.res-nav_click').click(function() {
+					$('.main-nav').slideToggle();
+					return false
 
-		    <!-- Custom Scripts -->
-		    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
-		    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
-
-		    <script>
-				$(function () {
-				  $(document).scroll(function () {
-					  var $nav = $(".navbar-fixed-top");
-					  $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
-					});
 				});
-			</script>
-			<script src="{{ url_for('static', filename='js/particles.js') }}"></script>
-			<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+			});
+		</script>
 
-			<script type="text/javascript">
-				$(window).scroll(function() {
-			    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+
+		<script type="text/javascript">
+			$(window).load(function() {
+
+				$('.main-nav li a, .servicelink').bind('click', function(event) {
+					var $anchor = $(this);
+
+					$('html, body').stop().animate({
+						scrollTop: $($anchor.attr('href')).offset().top - 102
+					}, 1500, 'easeInOutExpo');
+					if ($(window).width() < 768) {
+						$('.main-nav').hide();
+					}
+					event.preventDefault();
+				});
+			})
+		</script>
+
+	    <script>
+			$(function () {
+			  $(document).scroll(function () {
+				  var $nav = $(".navbar-fixed-top");
+				  $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+				});
+			});
+		</script>
+
+		<script type="text/javascript">
+			$(window).scroll(function() {
+		    	if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
 			        $('#return-to-top').fadeIn(200);    // Fade in the arrow
 			    } else {
 			        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
 			    }
-				});
-				$('#return-to-top').click(function() {      // When arrow is clicked
-			    $('body,html').animate({
-			        scrollTop : 0                       // Scroll to top of body
-			    }, 500);
-				});
-			</script>
-		{% endblock %}
+			});
+			$('#return-to-top').click(function() {      // When arrow is clicked
+		    	$('body,html').animate({
+		       		scrollTop : 0                       // Scroll to top of body
+		   		}, 500);
+			});
+		</script>
 
+	{% block scripts %}
+			
+	{% endblock %}
 	</body>
 </html>
