--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,60 +1,24 @@
+{% extends "layout.html" %}\
 
-<!doctype html>
-<html>
+{% block head %}
+	{{ super() }}
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, maximum-scale=1">
-
-	<title>FILIPINEU</title>
-	
-	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="img/x-icon">
-
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
-
-	<link href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='lib/font-awesome/css/font-awesome.css' ) }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet" type="text/css">
-
+	<!-- Custom CSS -->
 	<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
 	<link href="{{ url_for('static', filename='css/index.css') }}" rel="stylesheet" type="text/css">
 
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery/jquery.1.8.3.min.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-easing/jquery.easing.1.3.js') }}"></script>
-	
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-scrolltofixed.js') }}"></script>
-	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
+	<!-- Bootstrap Select -->
+	<link href="{{ url_for('static', filename='lib/bootstrap-select/css/bootstrap-select.min.css') }}" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap-select/js/bootstrap-select.min.js') }}"></script>
+
+	<!-- WOW JS -->
 	<script type="text/javascript" src="{{ url_for('static', filename='js/wow.js') }}"></script>
+
+	<!-- Classie JS -->
 	<script type="text/javascript" src="{{ url_for('static', filename='js/classie.js') }}"></script>
+{% endblock %}
 
-</head>
-
-<body>
-
-	<nav class="main-nav-outer navbar-fixed-top" id="test">
-		<div class="container">
-			<ul class="main-nav">
-				<li class="small-logo">
-					<a href="#"><img src="{{ url_for('static', filename='img/icon-white.png') }}" alt="" class="logo-img"></a>
-				</li>
-				<li>
-					<a href="/api" class="navbar-right">Get Started</a>
-				</li>
-				<li>
-					<a href="/about" class="navbar-right">About</a>
-				</li>
-				<li>
-					<a href="/" class="navbar-right">Home</a>
-				</li>
-			</ul>
-			<a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
-		</div>
-	</nav>
-	
+{% block content %}
 	<header class="parallax header" id="header">
 			<div id="particles-js"></div>
 			<div class="cover logo animated fadeInDown delay-07s">
@@ -72,19 +36,18 @@
 				<div class="col-md-6">
 					<div class="panel panel-default">
 					  <div class="panel-heading">
-					  	<div class="dropdown pull-left">
-  							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-  							  Filipino
-  							  <span class="caret"></span>
-  							</button>
-  							<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-  							  <li><a href="#">Filipino</a></li>
-  							  <li><a href="#">English</a></li>
-  							</ul>
-						</div>
+					  	<select id="input-lang" class="selectpicker pull-left">
+					  		<option value="en">
+					  			English
+					  		</option>
+					  		<option value="fl">
+					  			Filipino
+					  		</option>
+					  	</select>
 						<button class="btn btn-default pull-right" id="button-clear" id="button-clear">
 							<i class="fa fa-repeat" aria-hidden="true"></i>
 						</button>
+
 					  </div>
 					  <div class="panel-body">
 					    <textarea placeholder="Enter text here" id="input-area"></textarea>
@@ -95,16 +58,14 @@
 				<div class="col-md-6">
 					<div class="panel panel-default">
 					  <div class="panel-heading">
-					  	<div class="dropdown">
-  							<button class="btn btn-default" type="button" id="target-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-  							  English
-  							  <span class="caret"></span>
-  							</button>
-  							<ul class="dropdown-menu" aria-labelledby="target-menu">
-  							  <li>Filipino</li>
-  							  <li>English</li>
-  							</ul>
-						</div>
+					  	<select id="output-lang" class="selectpicker pull-left">
+					  		<option value="fl">
+					  			Filipino
+					  		</option>
+					  		<option value="en">
+					  			English
+					  		</option>
+					  	</select>
 					  </div>
 					  <div class="panel-body">
 					    <textarea placeholder="Output" id="output-area" readonly diabled></textarea>
@@ -115,34 +76,16 @@
 			<div class="clear"></div>
 			<div class="row">
 				<div class="col-md-2 col-md-offset-5 text-center">
-					<button class="btn btn-primary" id="button-translate">Translate</button>
+					<button class="btn btn-primary" id="button-translate" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Translating">
+						Translate
+					</button>
 				</div>
 			</div>
 		</div>
 	</section>
-	
-	<footer class="footer">
-		<div class="container">	
-			<div class="row">
-				<img src="{{ url_for('static', filename='img/icon-white.png') }}">
-				<span class="copyright">&copy; All Rights Reserved 2018</span>
-			</div>	
-		</div>
-	</footer>
+{% endblock %}
 
-	<a href="#" class="scrollup" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
-
-	<script type="text/javascript">
-		$(document).ready(function(e) {
-			$('#test').scrollToFixed();
-			$('.res-nav_click').click(function() {
-				$('.main-nav').slideToggle();
-				return false
-
-			});
-		});
-	</script>
-
+{% block scripts %}
 	<script>
 		wow = new WOW({
 			animateClass: 'animated',
@@ -151,60 +94,37 @@
 		wow.init();
 	</script>
 
-	<script type="text/javascript">
-		$(window).load(function() {
-
-			$('.main-nav li a, .servicelink').bind('click', function(event) {
-				var $anchor = $(this);
-
-				$('html, body').stop().animate({
-					scrollTop: $($anchor.attr('href')).offset().top - 102
-				}, 1500, 'easeInOutExpo');
-				if ($(window).width() < 768) {
-					$('.main-nav').hide();
-				}
-				event.preventDefault();
-			});
-		})
-	</script>
-
-	<script>
-		$(function () {
-		  $(document).scroll(function () {
-			  var $nav = $(".navbar-fixed-top");
-			  $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
-			});
-		});
-	</script>
 	<script src="{{ url_for('static', filename='js/particles.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/app.js') }}"></script>
-
-	<script type="text/javascript">
-		$(window).scroll(function() {
-	    if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
-	        $('#return-to-top').fadeIn(200);    // Fade in the arrow
-	    } else {
-	        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
-	    }
-		});
-		$('#return-to-top').click(function() {      // When arrow is clicked
-	    $('body,html').animate({
-	        scrollTop : 0                       // Scroll to top of body
-	    }, 500);
-		});
-	</script>
 
 	<script type="text/javascript">
 		var api_key = "0d600f2643ae8ffcdcf66965679c863aedc31c74661be4f2";
 		var request;
 
-		$("#button-clear").click(function(){
+		$("#input-lang").on('change', function(){
+			var index = $('#input-lang').prop('selectedIndex');
+
+			if(index == 0){
+				$('#ouput-lang').val('fl').change();
+			}
+			else{
+				$('#ouput-lang').val('en').change();
+			}
+		});
+
+		$("#button-clear").on('click', function(){
 			$('#input-area').val('');
 			$('#output-area').val('');
 		});
 
-		$("#button-translate").click(function(){
-			
+		$("#button-translate").on('click', function(){
+
+			var $this = $(this);
+			$this.button('loading');
+			$this.prop('disabled', true);
+			$("#input-area").prop("disabled", true);
+			$("#output-area").prop("disabled", true);
+
 			var url =  "/api/translate?key=" + api_key;
 
 			// Abort any pending request
@@ -216,20 +136,23 @@
 		        url: url,
 		        type: "post",
 		        data: {
-		        	text: $("#input-area").val()
+		        	text: $("#input-area").val(),
+		        	lang: $('#input-lang').val()
 		        }
 		    });
 
 		    // Callback handler that will be called on success
+
 		    request.done(function (response, textStatus, jqXHR){
 		        // Log a message to the console
 		        $('#output-area').val(response.data.output.text);
 		    });
 
+
 		    // Callback handler that will be called on failure
 		    request.fail(function (jqXHR, textStatus, errorThrown){
 		        // Log the error to the console
-		        console.error(
+		        alert(
 		            "The following error occurred: "+
 		            textStatus, errorThrown
 		        );
@@ -238,12 +161,12 @@
 		    // Callback handler that will be called regardless
 		    // if the request failed or succeeded
 		    request.always(function () {
-		        // Reenable the inputs
-		        $("input-area").prop("disabled", false);
+		        // Reenable the input
+		        $this.button('reset');
+		        $this.prop('disabled', false);
+		        $("#input-area").prop("disabled", false);
+				$("#output-area").prop("disabled", false);
 		    });
 		});
 	</script>
-
-</body>
-
-</html>
+{% endblock %}
