--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,3 +1,11 @@
+html, body, section {
+    height: 100%;
+}
+
+.container{
+    min-height: 100%;
+}
+
 textarea {
 	border-color: #fff;
 	resize: none;
@@ -32,7 +40,7 @@ textarea:disabled {
 
 .btn-default {
     background-color: #D9D9D9;
-    border-radius: 0px; 
+    border-radius: 5%; 
     /*padding: 10px;*/
     height: 40px;
 }
@@ -42,6 +50,14 @@ textarea:disabled {
     border-bottom: 1px solid transparent;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
+}
+
+.panel-heading #output-lang {
+    height: 100%;
+    width: 220px;
+    border: none;
+    background-color: #d9d9d9;
+    padding-left: 2%;
 }
 
 .btn-primary {
